# CSES-MCP

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  test.py
.github/workflows/: release.yml  tests.yml
docs/: REQUIREMENTS.md
src/cses_mcp/: client.py  main.py  server.py
src/cses_mcp/config/: settings.py
src/cses_mcp/handlers/: error_handler.py
src/cses_mcp/prompts/: __init__.py
src/cses_mcp/resources/: __init__.py  cses_categories.py
src/cses_mcp/tools/: __init__.py  fetch_categories_tools.py  fetch_problems_tools.py  submission_tools.py
src/cses_mcp/utils/: logger.py  validation.py
tests/: conftest.py
tests/fixtures/: cses_problem_statement_sample.html  cses_problemset_sample.html  cses_submission_list_sample.html  cses_submission_result_sample.html  cses_submit_form_sample.html
tests/integration/: test_server.py
tests/unit/: test_fetch_problems.py  test_get_categories.py  test_submission_tools.py  test_validation.py
