[project]
name = "cses-mcp"
version = "0.1.0"
description = "An MCP server for browsing CSES problems, submissions, and submitting solutions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastmcp[cli]>=3.4.2",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "mcp>=1.28.1",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
cses-mcp = "cses_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cses_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.20",
]
